# AI_planning_for_students

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  main.py  pyproject.toml
apps/api/config/: settings.py  urls.py
apps/api/core/: __init__.py
apps/api/core/firebase/: __init__.py  client.py
apps/api/core/langchain/: __init__.py  chains.py
apps/api/core/langsmith/: __init__.py  prompts.py  versioning.py
apps/api/feedback/: urls.py  views.py
apps/api/planner/: urls.py  views.py
apps/api/planner/guards/: __init__.py  input_guard.py  output_guard.py
apps/api/planner/services/: __init__.py  html_generator.py
apps/api/tests/: evaluation_criteria.json  sample_inputs.json
apps/web/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ActionButtons.tsx  InputForm.tsx  LoadingState.tsx  PlanViewer.tsx
apps/web/src/lib/: api.ts
docs/: API_SPEC.md  EVALUATION.md  IMPLEMENTATION_PLAN.md  PROMPTS.md
scripts/: setup.sh
